--- a/Version HAML/index2.haml
+++ b/Version HAML/index2.haml
@@ -1,19 +1,25 @@
 !!! 5
 %html(lang="es")
 
-  %head
+  /Head
+  %head 
   
     %meta(charset="utf-8")
     %title Jaleo
     %meta(name="description" content="Página de prueba")
     %meta(name="author" content="José A. Hernández")
+    %link(href="/favicon.ico" rel="shortcut.ico")
     
+  /Body
   %body
-  
+    
+    /Skip to content
     %a(href="#main") Saltar a contenido
     
+    /Header
     %header
-    
+      
+      /Navigation
       %nav
         %ul
           %li
@@ -29,6 +35,7 @@
     
     %hr
     
+    /Hero
     %section.hero
     
       %ul
@@ -36,7 +43,8 @@
         %li
         
           %ul
-          
+            
+            /Film title
             %li
               %h1 Los Vengadores: La Era de Ultrón
             
