--- a/Version HAML/register2.haml
+++ b/Version HAML/register2.haml
@@ -41,7 +41,7 @@
           
           %p Una vez comiences a ver la película, dispones de 72<abbr title="horas">h.</abbr> para verla cuantas veces, y tantos los dispositivos como quieras.
           
-          %p¿Ya estás registrado? <a href="#">Inicia tu sesión</a> ahora.</p>
+          %p¿Ya estás registrado? <a href="#">Inicia tu sesión</a> ahora.
           
         %hr
         
@@ -125,7 +125,7 @@
               %textarea#cvv(name="cvv")
 
           /mailing checkbox
-          %fielset
+          %fieldset
           
             %label(for="mailing")
               %input#mailing(type="checkbox") Recibir correos electrónicos ocasionales con noticias y novedades de Jaleo.
@@ -144,78 +144,77 @@
           
       %hr
       
-      /footer
-      %footer
+  /footer
+  %footer
     
-      %div
-      
-        %h2 Página
-        
-        %ul
-          %li
-            %a(href="#") Blog
-          %li
-            %a(href="#") Prensa
-          %li
-            %a(href="#") Condiciones de uso
-          %li
-            %a(href="#") Privacidad
-          %li
-            %a(href="#") Soporte
-        
-      %div
-      
-        %h2 Corporativo
-        
-        %ul
-          %li
-            %a(href="#") Nosotros
-          %li
-            %a(href="#") Contacto
-          %li
-            %a(href="#" hreflang="en") English site
-          %li
-            %a(href="#" hreflang="de") Deutsch website
-          %li
-            %a(href="#" hreflang="fr") Site français
-          
-      %div
-        
-        %h2 Síguenos
-        
-        %ul
-          %li
-            %a(href="#")
-              %img(src="#" alt="Facebook") Facebook
-          %li
-            %a(href="#")
-              %img(src="#" alt="twitter") Twitter
-          %li
-            %a(href="#")
-              %img(src="#" alt="Pinterest") Pinterest
-      
-      %div
-      
-        %h2
-          %img(src="#" LT="Logotipo de Jaleo") Jaleo
-          
-        %ul
-          %li
-            %a(href="#" rel="license") Jaleo de España S.A.
-          %li
-            %a(href="#") Calle del rey, 23 28080 Madrid
-          %li
-            %a(href="tel://0034555556585") 0034 555 55 65 85
-          %li
-            %a(href="mailto:info@jaleoapp.es") info@jaleoapp.es
-      
-      
+    %div
 
-                  
-                  
-        
-        
-          
-    
-      
-    
+      %h2 Página
+
+      %ul
+        %li
+          %a(href="#") Blog
+        %li
+          %a(href="#") Prensa
+        %li
+          %a(href="#") Condiciones de uso
+        %li
+          %a(href="#") Privacidad
+        %li
+          %a(href="#") Soporte
+
+    %div
+
+      %h2 Corporativo
+
+      %ul
+        %li
+          %a(href="#") Nosotros
+        %li
+          %a(href="#") Contacto
+        %li
+          %a(href="#" hreflang="en") English site
+        %li
+          %a(href="#" hreflang="de") Deutsch website
+        %li
+          %a(href="#" hreflang="fr") Site français
+
+    %div
+
+      %h2 Síguenos
+
+      %ul
+        %li
+          %a(href="#")
+            %img(src="#" alt="Facebook") Facebook
+        %li
+          %a(href="#")
+            %img(src="#" alt="twitter") Twitter
+        %li
+          %a(href="#")
+            %img(src="#" alt="Pinterest") Pinterest
+
+    %div
+
+      %h2
+        %img(src="#" LT="Logotipo de Jaleo") Jaleo
+
+      %ul
+        %li
+          %a(href="#" rel="license") Jaleo de España S.A.
+        %li
+          %a(href="#") Calle del rey, 23 28080 Madrid
+        %li
+          %a(href="tel://0034555556585") 0034 555 55 65 85
+        %li
+          %a(href="mailto:info@jaleoapp.es") info@jaleoapp.es
+
+
+
+
+
+
+
+
+
+
